force-app/main/default/objects/Account/fields/AdoptionsInProgress__c.field-meta.xml
<CustomField>
    <fullName>AdoptionsInProgress__c</fullName>
    <description>Number of Adoption Requests that are currently in Progress</description>
    <label>Adoptions in Progress</label>
    <summaryFilterItems>
        <field>AdoptionRequest__c.Status__c</field>
        <operation>equals</operation>
        <value>Created, Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>AdoptionRequest__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>