force-app/main/default/objects/Account/fields/NotSuccessfulAdoptions__c.field-meta.xml
<CustomField>
    <fullName>NotSuccessfulAdoptions__c</fullName>
    <description>Number of Adoption Requests ended without a match</description>
    <label>Not Successful Adoptions</label>
    <summaryFilterItems>
        <field>AdoptionRequest__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed - Not Adopted</value>
    </summaryFilterItems>
    <summaryForeignKey>AdoptionRequest__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>