force-app/main/default/objects/Account/fields/SuccessfulAdoptions__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulAdoptions__c</fullName>
    <description>Number of adoption processes completed successfully</description>
    <label>Successful Adoptions</label>
    <summaryFilterItems>
        <field>AdoptionRequest__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed - Adopted</value>
    </summaryFilterItems>
    <summaryForeignKey>AdoptionRequest__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>